{
    "name": "GameInput",
    "maps": [
        {
            "name": "Game",
            "id": "59ee8d98-86b5-4a9c-8a56-9a1607cf3f92",
            "actions": [
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "2f708947-6b95-4c72-bcf6-62b1e0b2f125",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "ae94bfc0-0338-4736-b449-65eaa14e4e4b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerLeft",
                    "type": "Button",
                    "id": "daacacbd-80a8-420a-b53b-788c1b6c6481",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerRight",
                    "type": "Button",
                    "id": "79e0f115-e8ea-458c-b921-3afa4816260d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerUp",
                    "type": "Button",
                    "id": "04f8eca7-4d6e-4c34-9a93-683adf9a30ed",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerDown",
                    "type": "Button",
                    "id": "8b96d7ef-8ff4-448c-aeed-4401ba1b30b4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a8921a0b-b93a-4dbc-bbcc-40a4d95b7d29",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "de81462d-dd2b-4705-80b5-6a570b85bb00",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill",
                    "type": "Button",
                    "id": "81f882ca-5673-4835-a41c-b364075ee2b7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "646031e6-7da7-4d39-85f2-c5a280f4de48",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b273f33e-7ad3-4a97-a03c-f475d65ccb4a",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Game",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "caf3dd2c-2837-4d1b-8155-ba9b3590bf78",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11416948-0983-4e7c-b862-97d631ba78d8",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ba79759-61c8-4bbc-a041-8a28ce336029",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "Press(pressPoint=0.9)",
                    "processors": "",
                    "groups": "Game",
                    "action": "TriggerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fb78b954-3b8d-4583-bd1c-5e6cf23c11cd",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "TriggerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88e20135-e3f4-4ec3-bf54-8e8f60ed77cf",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "TriggerLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd9de581-d368-4463-a13f-cbe8148a0337",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "TriggerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1870d7f4-272c-49b9-9825-a07ffb0e93b0",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "TriggerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fa71a24-0873-4d3c-af63-de947f1659b6",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "Press(pressPoint=0.9)",
                    "processors": "",
                    "groups": "Game",
                    "action": "TriggerRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6c583c9-03ff-41fb-bfb2-87f46f45b834",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Game",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f5c8f2ab-ab5e-42c3-b610-9f86e8629f0b",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11d602c9-8446-495a-927a-829c0c7cd33c",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "239c5fb4-089c-4131-a928-21d7992d6da6",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Skill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fe670ce-32b0-4fab-bff1-753a68b5c96c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Skill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "642519f9-32d2-4094-9918-68862e5a5b73",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Game",
                    "action": "TriggerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c9b8f29-5cd1-4322-81fb-f7452dd18ded",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "TriggerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9cdf23e-6664-413e-96e9-63e40c752a4f",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Game",
                    "action": "TriggerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45f68b1a-d8e6-451b-bae5-9f6062e1d500",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "TriggerDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bcc4dbde-13ef-409c-89ea-e7871afc1fa2",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Game",
                    "action": "TriggerDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66bea90d-d6fd-4e6a-a5d8-ba8a5ea3eb77",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Game",
                    "action": "TriggerDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Game",
            "bindingGroup": "Game",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}